<resources>
    <string name="splash_next_step">跳过</string>
    <string name="splash_time_countdown">倒计时：%1$s秒</string>
    <string name="empty_value">--</string>
    <string name="search">搜索</string>
    <string name="video">视频</string>
    <string name="fans">粉丝</string>
    <string name="shield">屏蔽</string>
    <string name="mute">静音</string>
    <string name="subscribe">订阅</string>
    <string name="follow">关注</string>
    <string name="follow_cancel">取消关注</string>
    <string name="follow_each_other">互相关注</string>
    <string name="follow_plus">+关注</string>
    <string name="followed">已关注</string>
    <string name="home">ta的主页</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>
    <string name="delete">删除</string>
    <string name="send">发送</string>
    <string name="chat">聊天</string>
    <string name="user">用户</string>
    <string name="notice">通知</string>
    <string name="rice_roll">饭票</string>
    <string name="cash_in">充值</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknown">未知</string>
    <string name="accompany">陪伴</string>
    <string name="detail">详情</string>
    <string name="collect">收藏</string>
    <string name="comment">评论</string>
    <string name="faq">常见问题</string>
    <string name="before_minute">%1$d 分钟前</string>
    <string name="before_hour">%1$d 小时前</string>
    <string name="before_day">%1$d 天前</string>
    <string name="before_week">%1$d 周前</string>
    <string name="before_month">%1$s 月前</string>
    <string name="before_year">%1$s 年前</string>
    <string name="just_now">刚刚</string>
    <string name="unit_100k">%1$1.1f万</string>
    <string name="unit_person">%1$s人</string>
    <string name="unit_m">%1$1.1fm</string>
    <string name="unit_km">%1$1.1fkm</string>
    <string name="unit_10k_km">%1$1.1fw km</string>
    <string name="today_time">今天 %1$s</string>
    <string name="duration_format_short" translatable="false">%2$d:%5$02d</string>
    <string name="duration_format_short_cn" translatable="false">%2$d分%5$02d秒</string>
    <string name="duration_format_long" translatable="false">%1$d:%3$02d:%5$02d</string>
    <string name="duration_format_long_cn" translatable="false">%1$d时%3$02d分%5$02d秒</string>
    <string name="sharing">正在分享</string>
    <string name="share_user_title">%s的个人主页</string>
    <string name="share_user_content">这是%s的火眼财经个人主页，非常赞，推荐你关注。</string>
    <string name="tab_title_subject">话题</string>
    <string name="login_by_sns">其他登录方式</string>
    <string name="title_phone_login">手&#160;&#160;机&#160;&#160;登&#160;&#160;录</string>
    <string name="title_verification">输&#160;&#160;入&#160;&#160;验&#160;&#160;证&#160;&#160;码</string>
    <string name="title_password">设&#160;&#160;置&#160;&#160;登&#160;&#160;录&#160;&#160;密&#160;&#160;码</string>
    <string name="recovery_title"><u>忘记密码</u>
    </string>
    <string name="prompt_password_input">请输入密码</string>
    <string name="prompt_password_input_again">再次输入新密码</string>
    <string name="prompt_set_password_input">6-20位数字和字符</string>
    <string name="prompt_verification_input">请输入验证码</string>
    <string name="prompt_phone_hint">手机号码</string>
    <string name="prompt_input_phone_hint">输入手机号</string>
    <string name="prompt_new_phone_hint">输入新的手机号码</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password_confirm">确认密码</string>
    <string name="verification_code_input">验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="get_verification_count_down">秒后重发</string>
    <string name="e_coin_give_count_rear">赠送&#160;%1$d&#160;云币</string>
    <string name="e_coin_count_rear">%1$d&#160;豆</string>
    <string name="cash_count">￥&#160;%1$.2f</string>
    <string name="cash_count_simple">￥&#160;%1$d</string>
    <string name="my_e_coin">我的云币</string>
    <string name="my_profit">我的收益</string>
    <string name="faq_assert">资产相关说明</string>
    <string name="chat_send">私信</string>
    <string name="create_group">建群</string>
    <string name="settings">设置</string>
    <string name="my_settings">我的设置</string>
    <string name="logout">退出登录</string>
    <string name="about_us">关于</string>
    <string name="about_us_app">关于火眼财经</string>
    <string name="contact_us">联系我们</string>
    <string name="seizure_account">封号处理准则</string>
    <string name="copyright">版权说明</string>
    <string name="score_detail">消费详情</string>
    <string name="msg_no_score_record">没有消费记录数据</string>
    <string name="check_update">检查更新</string>
    <string name="user_info_set">个人设置</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hit">请输入您的昵称</string>
    <string name="yb_id">易播号</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="constellation">星座</string>
    <string name="area">地区</string>
    <string name="signature">介绍自己</string>
    <string name="hint_signature">火眼助你成为财经大师</string>
    <string name="default_user_birthday">1990&#8211;6&#8211;15</string>
    <string name="default_user_constellation">双子座</string>
    <string name="msg_verify_code_from_phone">通过以下手机接收验证码信息</string>
    <string name="msg_phone_number_error">该手机号码无法正常使用?</string>
    <string name="msg_phone_number_invalid">手机号码格式错误</string>
    <string name="msg_phone_number_empty">手机号码不能为空</string>
    <string name="msg_phone_registered">手机号已注册</string>
    <string name="msg_phone_unregistered">手机号没有注册,请先注册</string>
    <string name="msg_phone_have_bound">该手机号已被其它帐绑定,请使用未绑定过的手机号</string>
    <string name="msg_phone_not_registered">手机号未注册</string>
    <string name="msg_phone_need_verify">请重新获取验证码并验证</string>
    <string name="msg_sns_account_have_bind">您的帐号已被其它帐号绑定</string>
    <string name="msg_network_bad_check_retry">网络异常，请检查网络后重试</string>
    <string name="msg_network_bad_check_click_retry">网络不给力\n请点击重新加载</string>
    <string name="msg_network_invalid">网络不可用</string>
    <string name="msg_verify_failed">验证失败,请检查您的验证码</string>
    <string name="msg_verify_code_empty">验证码不能为空</string>
    <string name="msg_verify_code_invalid">请输入正确的验证码</string>
    <string name="msg_old_password_empty">旧密码不能为空</string>
    <string name="msg_new_password_empty">新密码不能为空</string>
    <string name="msg_new_password_again_empty">请再次输入新密码</string>
    <string name="msg_inconsistent_password">两次密码输入不一致</string>
    <string name="msg_update_password_success">密码修改成功</string>
    <string name="msg_password_empty">密码不能为空</string>
    <string name="msg_password_invalid">密码格式错误</string>
    <string name="msg_password_space">密码不能纯中文</string>
    <string name="msg_password_chinese">密码不能包含空格</string>
    <string name="msg_password_asterisk">密码不能包含星号</string>
    <string name="msg_password_length">密码不能少于六位</string>
    <string name="msg_nickname_empty">昵称不能为空</string>
    <string name="msg_sign_empty">签名不能为空</string>
    <string name="msg_birthday_empty">请选择您的出生日期</string>
    <string name="msg_password_old_wrong">原密码错误</string>
    <string name="msg_registered_success">注册成功</string>
    <string name="msg_registered_error">注册失败</string>
    <string name="msg_login_failed">登陆失败</string>
    <string name="msg_reset_password_success">重置密码成功</string>
    <string name="msg_reset_password_failed">重置密码失败</string>
    <string name="msg_account_bind_change_phone_success">更换手机号成功</string>
    <string name="msg_account_bind_success">绑定成功</string>
    <string name="msg_account_bind_failed">绑定失败</string>
    <string name="msg_video_url_null">视频不存在</string>
    <string name="msg_play_error">抱歉，播放异常</string>
    <string name="msg_error">出错了!</string>
    <string name="msg_error_auth_conflicts">您的帐号已被其它火眼财经帐号绑定过，无法完成绑定。</string>
    <string name="msg_session_invalid">你的火眼财经帐号已在其它地方登录，请确认帐号安全。</string>
    <string name="msg_contact_info_error">邮箱有误，请核对</string>
    <string name="msg_follow_failed">关注失败</string>
    <string name="msg_follow_success">关注成功</string>
    <string name="msg_unfollow_success">取消关注成功</string>
    <string name="msg_remove_success">删除成功</string>
    <string name="msg_remove_failed">删除失败</string>
    <string name="msg_live_is_sharing">主播正在分享</string>
    <string name="msg_get_sms_duration_too_short">获取短信频繁，请稍候再试</string>
    <string name="msg_server_exception_retry">服务器异常，请稍候重试</string>
    <string name="msg_keyword_is_empty">请输入关键字</string>
    <string name="msg_report_success">举报成功</string>
    <string name="msg_unbind_success">解除绑定成功</string>
    <string name="msg_sns_auth_failed">%1$s认证失败</string>
    <string name="msg_version_is_the_latest">您的应用已经是最新版本</string>
    <string name="msg_click_again_to_exit">再按一次退出火眼财经</string>
    <string name="msg_should_reply_self">自己不能回复自己</string>
    <string name="msg_alert_no_sd_card">未找到存储卡，无法存储照片！</string>
    <string name="msg_no_permission_read_contacts">已被禁示权限：读取联系人。可在权限管理重新授权。</string>
    <string name="msg_no_permission_open_camera">已被禁止权限：拍照和录像。可在权限管理重新授权。</string>
    <string name="msg_set_remarks_success">设置备注成功</string>
    <string name="msg_need_app_market">需要先安装应用市场</string>
    <string name="msg_no_photos_browser_tip">您的系统没有文件管理器和相册支持,请先安装！</string>
    <string name="msg_copy_to_clipboard_success">复制成功</string>
    <string name="msg_cash_in_success">充值成功</string>
    <string name="msg_cash_in_confirmation">支付结果确认中</string>
    <string name="msg_pay_failed">支付失败</string>
    <string name="msg_pay_cancel">支付取消</string>
    <string name="msg_cash_in_need_select_amount">请选择充值金额</string>
    <string name="msg_cash_out_min_limit">提现金额不能少于2元</string>
    <string name="msg_cash_out_too_little">可提现金额少于2元无法提现</string>
    <string name="msg_cash_out_too_much">您金额超出今天最大可提现金额</string>
    <string name="msg_cash_out_success">提现成功</string>
    <string name="msg_cash_out_failed">提现失败</string>
    <string name="msg_cash_out_success_remind">请于24小时内在微信领取提现红包，过期未领取将不予处理</string>
    <string name="msg_need_bind_weixin_first">请先绑定微信</string>
    <string name="msg_gift_buy_failed_e_coin_not_enough">火眼豆不足</string>
    <string name="msg_have_shut_up">您已被禁言</string>
    <string name="msg_no_v_call_request_user">没有人请求连麦</string>
    <string name="msg_no_need_request_twice">您已经申请过申连麦了，无需重复申请</string>
    <string name="msg_disconnect_video_call">结束当前连麦</string>
    <string name="dl_network_traffic">流量提醒</string>
    <string name="dl_msg_network_traffic_4G">正在使用移动网络，继续使用可能产生流量费用</string>
    <string name="dl_msg_network_i_know">我知道了</string>
    <string name="phone">手机号</string>
    <string name="weixin_number">微信号</string>
    <string name="qq_number">QQ号</string>
    <string name="sina_number">新浪微博号</string>
    <string name="bind_phone_number">绑定手机号</string>
    <string name="bind_social_account">社交帐号绑定</string>
    <string name="update_password">修改密码</string>
    <string name="binding">绑定</string>
    <string name="unbound">未绑定</string>
    <string name="bind_social_contact">社交账号绑定</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="prompt_password_input_live">请输入4位数字密码</string>
    <string name="navigation_title_news">资讯</string>
    <string name="navigation_title_live">直播</string>
    <string name="navigation_title_market">行情</string>
    <string name="navigation_title_user">个人</string>
    <string name="hint_phone">请填写您的手机号</string>
    <string name="agree">同意</string>
    <string name="user_protocol">用户协议</string>
    <string name="next_step">下一步</string>
    <string name="prompt_registered">您已注册,点击</string>
    <string name="login_now">立即登录</string>
    <string name="stock_name">名称</string>
    <string name="up_to_date_price">现价</string>
    <string name="price_change_ratio">涨跌幅</string>
</resources>