<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 EasyVaas.
  ~ http://www.easyvaas.com
  ~ All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/set_password_root_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/common_title_tv"
        layout="@layout/common_header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/set_password_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="80dp"
        android:text="@string/prompt_password_input_live"
        android:textColor="@color/text_common"
        android:textSize="@dimen/text_size_title_h2" />

    <LinearLayout
        android:id="@+id/password_area_ll"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/set_password_title_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password_1_tv"
            style="@style/password_set_edit_style" />

        <TextView
            android:id="@+id/password_2_tv"
            style="@style/password_set_edit_style"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/password_3_tv"
            style="@style/password_set_edit_style"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/password_4_tv"
            style="@style/password_set_edit_style" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keyboard_numbers_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <Button
                android:id="@+id/btn_one"
                style="@style/keyboard_number_text_style"
                android:text="@string/one" />

            <Button
                android:id="@+id/btn_two"
                style="@style/keyboard_number_text_style"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_three"
                style="@style/keyboard_number_text_style"
                android:text="@string/three" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <Button
                android:id="@+id/btn_four"
                style="@style/keyboard_number_text_style"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn_five"
                style="@style/keyboard_number_text_style"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn_six"
                style="@style/keyboard_number_text_style"
                android:text="@string/six" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <Button
                android:id="@+id/btn_seven"
                style="@style/keyboard_number_text_style"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn_eight"
                style="@style/keyboard_number_text_style"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn_nine"
                style="@style/keyboard_number_text_style"
                android:text="@string/nine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <Button
                android:id="@+id/btn_delete"
                style="@style/keyboard_number_text_style"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btn_zero"
                style="@style/keyboard_number_text_style"
                android:text="@string/zero" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/keyboard_number_text_style"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
