<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 EasyVaas.
  ~ http://www.easyvaas.com
  ~ All rights reserved.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_gray">
    <include
        android:id="@+id/common_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/common_header_layout"/>
    <View
        android:id="@+id/common_shadow"
        android:layout_width="match_parent"
        android:layout_below="@+id/common_title_tv"
        android:layout_height="@dimen/actionbar_shadow_height"
        android:background="@drawable/shape_toolbar_shadow" />
    <ImageView
        android:layout_marginTop="15dp"
        style="@style/default_horizontal_line_style"/>
    <LinearLayout style="@style/item_bind_account">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textColor="@color/login_text_color_3"
            android:textSize="@dimen/text_size_title_h1"/>
        <EditText
            android:id="@+id/old_password_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:hint="@string/prompt_password_input"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="10dp"
            android:textColorHint="@color/login_text_color"
            android:textSize="@dimen/text_size_title_h1"/>
    </LinearLayout>

    <ImageView
        style="@style/default_horizontal_line_style"/>

    <LinearLayout
        style="@style/item_bind_account">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/login_text_color_3"
            android:textSize="@dimen/text_size_title_h1"/>
        <EditText
            android:id="@+id/new_password_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/prompt_set_password_input"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="10dp"
            android:textColorHint="@color/login_text_color"
            android:textSize="@dimen/text_size_title_h1"/>
    </LinearLayout>
    <ImageView
        style="@style/default_horizontal_line_style"/>
    <LinearLayout
        style="@style/item_bind_account">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/new_password_confirm"
            android:textColor="@color/login_text_color_3"
            android:textSize="@dimen/text_size_title_h1"/>
        <EditText
            android:id="@+id/new_password_confirm_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:hint="@string/prompt_password_input_again"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="10dp"
            android:textColorHint="@color/login_text_color"
            android:textSize="@dimen/text_size_title_h1"/>
    </LinearLayout>
    <ImageView
        style="@style/default_horizontal_line_style"/>
</LinearLayout>